@@ -1,3 +1,12 @@
+2002-08-02  Ulrich Drepper  <drepper@redhat.com>
+
+	* resolv/nss_dns/dns-host.c (_nss_dns_gethostbyaddr_r): Adapt
+	previous patch.
+
+2002-06-29  Todd Fries  <todd@openbsd.org>
+
+	* resolv/gethnamaddr.c (gethostbyaddr): Try ip6.int if ip6.arpa fails.
+
 2002-08-02  Jakub Jelinek  <jakub@redhat.com>
 
 	* include/errno.h: Don't include tls.h if _ISOMAC is defined.
